<!DOCTYPE resources [<!ENTITY appService "https://kzabani.com/">]>
<resources>
    <!-- App name-->
    <string name="app_name">کہانی زبانی </string>

    <!--Put yes to display ads-->
    <string name="bannervisible">yes</string>
    <string name="insertialvisible">yes</string>

    <!-- Admob Ids-->
    <string name="AdmobBannerAdsID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdmobFullScreenAdsID">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Developer more app listing-->
    <string name="MORE_APP_LINK">ExpressTemplate</string>

    <!-- Story teller language code -->
    <string name="tts_locale">en</string>

    <string name="txt_settings">Settings</string>
    <string name="txt_fav">Favorite</string>
    <string name="txt_read_later">Bookmark</string>
    <string name="txt_recent">Recent</string>
    <string name="isNight">isNight</string>
    <string name="txt_no_recent">No recent</string>
    <string name="txt_no_read">No bookmark added</string>
    <string name="txt_no_fav">No favourites added</string>
    <string name="txt_no_Stories">No Stories Available!</string>
    <string name="txt_nocategories_error">No Categories Available!</string>

    <!--Live Service Path-->

    <string name="link">&appService;api/</string>
    <string name="category">get_category.php?</string>
    <string name="story">get_story.php?</string>
    <string name="search">serach.php?</string>
    <string name="imagePath">&appService;uploads/categories/</string>
    <string name="audioPath">&appService;uploads/stories/</string>

    <!--Navigation Drawer-->
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favorite</string>
    <string name="nav_read_later">Bookmark</string>
    <string name="nav_recent">Recent</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rate_app">Rate this app</string>
    <string name="nav_share_app">Share this app</string>
    <string name="nav_more_apps">More Apps</string>
    <string name="srch">Search</string>
    <string name="nointernet">No Internet Connection!</string>

    <!--    Don't make changes-->
    <string name="isAudio">true</string>
</resources>
