<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Menu">
            <menu>
                <item
                    android:id="@+id/drw_nav_home"
                    android:icon="@drawable/ic_home2"
                    android:title="@string/nav_home" />
                <item
                    android:id="@+id/drw_nav_read_later"
                    android:icon="@drawable/ic_bookmark"
                    android:title="@string/nav_read_later" />
                <item
                    android:id="@+id/drw_nav_recents"
                    android:icon="@drawable/ic_resent"
                    android:title="@string/nav_recent" />
                <item
                    android:id="@+id/drw_nav_settings"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/nav_settings" />
            </menu>
        </item>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/drw_nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/nav_rate_app" />
            <item
                android:id="@+id/drw_nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share_app" />
            <item
                android:id="@+id/drw_nav_more"
                android:icon="@drawable/ic_more_apps"
                android:title="@string/nav_more_apps"
                android:visible="true" />
        </menu>
    </item>

</menu>