<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.storiestech.org.activities.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="50dp"
        android:id="@+id/detail_toolbar"
        style="@style/toolbarStyle"
        android:theme="@style/toolbarStyle"
        app:navigationIcon="@drawable/ic_back"
        app:title=" ">

        <TextView
            android:id="@+id/txtTit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/axiforma_medium"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detail_toolbar"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/sv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/detail_toolbar"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ll_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/story_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/axiforma_bold"
                            android:gravity="start"
                            android:text="@string/app_name"
                            android:textColor="#000" />

                        <TextView
                            android:id="@+id/story_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/axiforma_regular"
                            android:lineSpacingExtra="1.5dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/app_name"
                            android:textColor="#000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtNoData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/axiforma_regular"
                        android:gravity="center"
                        android:lineSpacingExtra="1.5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/txt_no_recent"
                        android:textColor="@color/light_gray"
                        android:textSize="17sp"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linTTS"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_previous"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/btn_speak"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_play" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_pause_button"
                        android:visibility="gone" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_next"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_speak2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/ic_volume_up_black_24dp"
                android:visibility="gone"
                app:fabSize="normal" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                app:adSize="BANNER"
                app:adUnitId="@string/AdmobBannerAdsID" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
